--- a/day 5/style.css
+++ b/day 5/style.css
@@ -1,15 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu");
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Ubuntu', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-    margin: 0;
+  font-family: "Ubuntu", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
+}
+
+.bg {
+  background: url("https://media.istockphoto.com/id/1221035026/tr/foto%C4%9Fraf/do%C4%9Fada-burunlara-dokunan-k%C4%B1z%C4%B1l-tilki-anne-ve-gen%C3%A7-yavru-ailesi.jpg?s=612x612&w=0&k=20&c=GPLijBnCxD7RQEUPpiBO5RrD3MKYQJlsvEEghkKm5pU=") no-repeat center center/cover;
+  position: absolute;
+  top: -30px;
+  left: -30px;
+  width: calc(100vw + 60px);
+  height: calc(100vh + 60px);
+  z-index: -1;
+  filter: blur(0px);
+
+}
+
+.loading-text {
+    font-size: 50px;
+    color: #fff;
 }
