--- a/day 19/style.css
+++ b/day 19/style.css
@@ -14,7 +14,6 @@ body {
     height: 100vh;
     overflow: hidden;
     margin: 0;
-    background-image: url('https://images.unsplash.com/photo-1681325655883-14885bd9cd93?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80');
     background-position: center center ;
     background-size: cover;
     transition: 0.4s ;
@@ -75,9 +74,11 @@ body::before {
 }
 
 .left-arrow {
-    left: calc(15vw - 70px);
+    left: calc(15vw - 69px);
+    border-right: transparent;
 } 
 
 .right-arrow {
-    right: calc(15vw - 70px);
+    right: calc(15vw - 69px);
+    border-left: transparent;
 } 
