--- a/day 25/style.css
+++ b/day 25/style.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    background-color: #ecf0f1;
     font-family: 'Ubuntu', sans-serif;
     display: flex;
     align-items: center;
@@ -14,3 +15,69 @@ body {
     overflow: hidden;
     margin: 0;
 }
+
+img {
+    max-width: 100%;
+}
+
+.card {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    width: 400px;
+}
+
+.card-header {
+    height: 220px;
+}
+
+.card-header img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-content {
+    background-color: #fff;
+    padding: 30px;
+}
+
+.card-title {
+  height: 20px;
+  margin: 0;
+}
+
+.card-excerpt {
+    color: #777;
+    margin: 10px 0 20px;
+}
+
+.author {
+    display: flex;
+}
+
+.profile-img {
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    overflow: hidden;
+}
+
+.author-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: space-around;
+    margin-left: 10px;
+    width: 100px;
+}
+
+.author-info small {
+    color: #aaa;
+    margin-top: 5px;
+}
+
+
