--- a/day 25/style.css
+++ b/day 25/style.css
@@ -46,8 +46,8 @@ img {
 }
 
 .card-title {
-  height: 20px;
-  margin: 0;
+    height: 20px;
+    margin: 0;
 }
 
 .card-excerpt {
@@ -80,4 +80,26 @@ img {
     margin-top: 5px;
 }
 
+.animated-bg {
+    background-image: linear-gradient(to right, #f6f7f8 0%, #edeef1 20%, #f6f7f8 40%, #f6f7f8 100%);
+    background-size: 200% 100%;
+    animation: bgPos 1s linear infinite;
+}
 
+.animated-bg-text {
+    display: inline-block;
+    margin: 0;
+    height: 10px;
+    width: 100%;
+    border-radius: 50px;
+}
+
+@keyframes bgPos {
+    0% {
+        background-position: 50% 0;
+    }
+
+    100% {
+        background-position: -150% 0;
+    }
+}
